--- a/availability/templates/login_form.html
+++ b/availability/templates/login_form.html
@@ -5,12 +5,15 @@
 {% endblock %}
 
 {% block body %}
+<link rel="stylesheet" type="text/css" href="/static/form.css">
 <form action="" method="post" enctype="multipart/form-data">
     {% csrf_token %}
     {% include 'form-template.html' %}
-    <input type="submit" id="Submit" value="Submit"/>
+    <span><input type="submit" id="Submit" value="Submit"/></span>
+	<span><a href="{% url 'register' %}">Need an account?</a></span>
+	<p>**I will never send emails out to any emails registered here as this is only a demo of a project I am working on. Emails can be anything as long as they contain an @ character; they can even be made up.**</p>
+	<p>**If you don't want to register feel free to log on with username "testperson" and password "testing123" to try it out.**</p>
 </form>
-<a href="{% url 'register' %}">Need an account?</a>
 <p>{{ form.errors }}</p>
 <p>{{ form.non_field_errors }}</p>
 {% endblock %}
