--- a/availability/templates/activity_form.html
+++ b/availability/templates/activity_form.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block body %}
-<link rel="stylesheet" type="text/css" href="/static/css/new.css">
+<link rel="stylesheet" type="text/css" href="/static/form.css">
 <form action="" method="post" enctype="multipart/form-data">
     {% csrf_token %}
     {% include 'form-template.html' %}
