Added a bar at the bottom of the schedule for navigation, it doesn't go anywhere yet

--- a/availability/templates/index.html
+++ b/availability/templates/index.html
@@ -36,4 +36,8 @@
     </div>
     {% endfor %}
 </div>
+<div class="calendar-date-nav">
+	<a href="#">Last Week</a>
+	<a href="#">Next Week</a>
+</div>
 {% endblock %}
