Changed registration form to contain new information for users wanting to see the app without making an account.

--- a/availability/templates/registration_form.html
+++ b/availability/templates/registration_form.html
@@ -10,6 +10,6 @@
     {% include 'form-template.html' %}
     <input type="submit" id="Submit" value="Submit"/>
 </form>
-<p>I will never send emails out to any emails registered here as this is only a demo of a project I am working on. Emails can even be blank or gibberish and will still be accepted as long as they contain an @ character.</p>
-<p>If you don't want to register fee free to log on with username "testperson" and password "testing123" to try it out.</p>
+<p>I will never send emails out to any emails registered here as this is only a demo of a project I am working on. Emails can be anything as long as they contain an @ character; they can even be made up.</p>
+<p>If you don't want to register feel free to log on with username "testperson" and password "testing123" to try it out.</p>
 {% endblock %}
