--- a/availability/templates/base.html
+++ b/availability/templates/base.html
@@ -18,7 +18,8 @@
         <a href="{% url 'index' %}" class="nav-profile-link">Profile</a>
         <a href="{% url 'new_activity' %}" class="nav-add-link">+Add Activity</a>
         <a href="{% url 'new_availability' %}" class="nav-add-link">+Add Availability</a>
-    </nav>
+		<a href="{% url 'matches' %}" class="nav-add-link">Matches</a>
+	</nav>
 {% block body %}
 {% endblock %}
 </body>
