Added a message for when you have no matches.

--- a/availability/templates/matches.html
+++ b/availability/templates/matches.html
@@ -11,13 +11,17 @@
 	<div class="header-row flex flex-activity">Wants To Go...</div>
 	<div class="header-row flex flex-start">Earlier Start Time</div>
 	<div class="header-row flex flex-end">Later End Time</div>
-	{% for match in matches %}
-		{% for me, other, activity, start, end in match %}
-			<div class="flex flex-other flex-item">{{ other }}</div>
-			<div class="flex flex-activity flex-item">{{ activity }}</div>
-			<div class="flex flex-start flex-item">{{ start }}</div>
-			<div class="flex flex-end flex-item">{{ end }} </div>
+	{% if matches|length > 0 %}
+		{% for match in matches %}
+			{% for me, other, activity, start, end in match %}
+				<div class="flex flex-other flex-item">{{ other }}</div>
+				<div class="flex flex-activity flex-item">{{ activity }}</div>
+				<div class="flex flex-start flex-item">{{ start }}</div>
+				<div class="flex flex-end flex-item">{{ end }} </div>
+			{% endfor %}
 		{% endfor %}
-	{% endfor %}
+	{% else %}
+		<div class="flex flex-none flex-item">No one is doing anything when you are...</div>
+	{% endif %}
 	</div>
 {% endblock %}
