Made the navigation bar and the matches page mobile responsive

--- a/availability/templates/matches.html
+++ b/availability/templates/matches.html
@@ -7,21 +7,18 @@
 {% block body %}
 <link rel="stylesheet" type="text/css" href="/static/matches.css">
 	<div class="match-grid">
-	<div class="header-row flex flex-other">This Person...</div>
-	<div class="header-row flex flex-activity">Wants To Go...</div>
-	<div class="header-row flex flex-start">Earlier Start Time</div>
-	<div class="header-row flex flex-end">Later End Time</div>
-	{% if matches|length > 0 %}
-		{% for match in matches %}
-			{% for me, other, activity, start, end in match %}
-				<div class="flex flex-other flex-item">{{ other }}</div>
-				<div class="flex flex-activity flex-item">{{ activity }}</div>
-				<div class="flex flex-start flex-item">{{ start }}</div>
-				<div class="flex flex-end flex-item">{{ end }} </div>
+		{% if matches|length > 0 %}
+			{% for match in matches %}
+				{% for me, other, activity, start, end in match %}
+					<div class="availability-header">Availability</div>
+					<div class="col-1 flex">{{ other }}</div>
+					<div class="col-2 flex">{{ activity }}</div>
+					<div class="col-3 flex">{{ start }}</div>
+					<div class="col-4 flex">{{ end }} </div>
+				{% endfor %}
 			{% endfor %}
-		{% endfor %}
-	{% else %}
-		<div class="flex flex-none flex-item">No one is doing anything when you are...</div>
-	{% endif %}
+		{% else %}
+			<div class="">No one is doing anything when you are...</div>
+		{% endif %}
 	</div>
 {% endblock %}
