--- a/availability/templates/base.html
+++ b/availability/templates/base.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width">
     <title>
         {% block title %}
             Available
@@ -12,13 +13,13 @@
 </head>
 <body>
     <nav>
-        <a href="{% url 'index' %}" class="nav-logo">Availability</a>
-        <a href="{% url 'index' %}">Home</a>
-        <a href="{% url 'logout' %}" class="nav-logout-link">Log Out</a>
-        <a href="{% url 'index' %}" class="nav-profile-link">Profile</a>
-        <a href="{% url 'new_activity' %}" class="nav-add-link">+Add Activity</a>
-        <a href="{% url 'new_availability' %}" class="nav-add-link">+Add Availability</a>
-		<a href="{% url 'matches' %}" class="nav-add-link">Matches</a>
+        <div class="nav-logo"><a href="{% url 'index' %}">Availability</a></div>
+        <div class="nav-link"><a href="{% url 'index' %}">Home</a></div>
+		<div class="nav-link"><a href="{% url 'logout' %}">Log Out</a></div>
+		<div class="nav-link"><a href="{% url 'index' %}">Profile</a></div>
+		<div class="nav-link"><a href="{% url 'matches' %}">Matches</a></div>
+        <div class="nav-link"><a href="{% url 'new_activity' %}">+Add Activity</a></div>
+        <div class="nav-link"><a href="{% url 'new_availability' %}">+Add Availability</a></div>
 	</nav>
 {% block body %}
 {% endblock %}
