--- a/static_files/matches.css
+++ b/static_files/matches.css
@@ -1,51 +1,87 @@
 @import url('https://fonts.googleapis.com/css?family=PT+Sans');/*font-family: 'PT Sans', sans-serif;*/
 .match-grid
 {
+	width:100%;
+	display:inline-flex;
+	flex-wrap:wrap;
+	flex-direction:column;
+	justify-content:center;
 	font-size:0;
-	margin:10px;
-	padding-top:10px;
 }
-.header-row
+
+.availability-header
 {
-	font-weight:600;
-	text-indent:20px;
-	min-height:50px;
-	line-height:50px;
+	height:60px;
+	flex-basis:99%;
 	background:#A8B3CD;
+	margin:4px 4px 0 4px;
+	border-radius:2px;
+	font-size:16px;
+	line-height:60px;
+	font-family: 'PT Sans', sans-serif;
+	text-indent:15px;
+	font-weight:600;
 }
 .flex
 {
-	display:inline-flex;
-	font-size:16px;
-	font-family: 'PT Sans', sans-serif;
-	margin:1px;
-	border-radius:2px;
-}
-.flex-item
-{
-	min-height:40px;
-	text-indent:30px;
+	height:40px;
 	line-height:40px;
-	background:#d9d9d9;
+	font-size:14px;
+	font-family: 'PT Sans', sans-serif;
+	border-radius:2px;
+	margin:2px;
+	text-indent:15px;
 }
-.flex-other
+
+/*Column Classes*/
+.col-1::before
 {
-	min-width:calc(25% - 2px);
+	content:"This Person: ";
+	font-weight:600;
 }
-.flex-activity
+.col-2::before
 {
-	min-width:calc(25% - 2px);
+	content:"Wants to Go: ";
+	font-weight:600;
 }
-.flex-start
+.col-3::before
 {
-	min-width:calc(25% - 2px);
+	content:"From: ";
+	font-weight:600;
 }
-.flex-end
+.col-4::before
 {
-	min-width:calc(25% - 2px);
+	content:"To: ";
+	font-weight:600;
 }
-.flex-none
+	
+/*NON-MOBILE STYLES*/
+@media only screen and (min-width:400px)
 {
-	min-width:calc(100% - 2px);
-	text-align:center;
+	.match-grid
+	{
+		flex-direction:row;
+	}
+	.header-row
+	{
+		display:initial;
+	}
+	
+	/*Column Classes*/
+	.col-1
+	{
+		flex-basis:49%;
+	}
+	.col-2
+	{
+		flex-basis:49%;
+	}
+	.col-3
+	{
+		flex-basis:49%;
+	}
+	.col-4
+	{
+		flex-basis:49%;
+	}
 }
