--- a/availability/templates/matches.html
+++ b/availability/templates/matches.html
@@ -18,7 +18,7 @@
 				{% endfor %}
 			{% endfor %}
 		{% else %}
-			<div class="">No one is doing anything when you are...</div>
+			<div class="flex col-full-width">No one is doing anything when you are...</div>
 		{% endif %}
 	</div>
 {% endblock %}
